--- a/skeleton/.gitlab-ci.yml
+++ b/skeleton/.gitlab-ci.yml
@@ -1,20 +1,20 @@
 create-argocd-application:
     script: |
         curl -v -k --fail --location \
-        --request POST '{{values.argocd_url}}/api/v1/applications' \
+        --request POST '${{values.argocd_url}}/api/v1/applications' \
         --header 'Content-Type: application/json' \
-        --header 'Cookie: argocd.token={{values.argocd_token}}' \
+        --header 'Cookie: argocd.token=${{values.argocd_token}}' \
         --data-raw '{
             "metadata": {
-                "name": "{{values.component_id}}"
+                "name": "${{values.component_id}}"
             },
             "spec": {
                 "source": {
-                    "repoURL": "{{values.storePath}}.git",
+                    "repoURL": "${{values.storePath}}.git",
                     "path": "charts/"
                 },
                 "destination": {
-                    "namespace": "{{values.component_id}}",
+                    "namespace": "${{values.component_id}}",
                     "server": "https://kubernetes.default.svc"
                 },
                 "syncPolicy": {
