--- a/skeleton/charts/rds.yaml
+++ b/skeleton/charts/rds.yaml
@@ -1,23 +1,23 @@
 apiVersion: database.aws.crossplane.io/v1beta1
 kind: RDSInstance
 metadata:
-  name: { { values.rdsRef } }
+  name: ${{values.rdsRef}}
   labels:
-    backstage.io/kubernetes-id: { { values.component_id } }
+    backstage.io/kubernetes-id: ${{values.component_id}}
 spec:
   forProvider:
-    region: { { values.rdsRegion } }
-    allocatedStorage: { { values.rdsDataDiskSizeGb } }
+    region: ${{values.rdsRegion}}
+    allocatedStorage: ${{values.rdsDataDiskSizeGb}}
     autoMinorVersionUpgrade: true
     backupRetentionPeriod: 0
     caCertificateIdentifier: rds-ca-2019
     copyTagsToSnapshot: false
-    dbInstanceClass: { { values.rdsInstanceClass } }
+    dbInstanceClass: ${{values.rdsInstanceClass}}
     deletionProtection: false
     enableIAMDatabaseAuthentication: false
     enablePerformanceInsights: false
     engine: postgres
-    engineVersion: { { values.rdsEngineVersion | jsonify } }
+    engineVersion: ${{values.rdsEngineVersion | jsonify}}
     licenseModel: postgresql-license
     masterUsername: amministratore
     multiAZ: false
@@ -25,7 +25,7 @@ spec:
     port: 5432
     publiclyAccessible: true
     storageEncrypted: false
-    storageType: { { values.rdsStorageType } }
+    storageType: ${{values.rdsStorageType}}
   writeConnectionSecretToRef:
     name: rdspostgresql-conn
     namespace: crossplane-system
