--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -1,14 +1,14 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.component_id | jsonify}}
-  description: ${{values.description | jsonify}}
+  name: ${{values.component_id}}
+  description: ${{values.description}}
   annotations:
     github.com/project-slug: ${{values.destination.git.owner + "/" + values.destination.git.name}}
     backstage.io/techdocs-ref: url:{{values.storePath}}
-    argocd/app-name: ${{values.component_id | jsonify}}
-    backstage.io/kubernetes-id: ${{values.component_id | jsonify}}
+    argocd/app-name: ${{values.component_id}}
+    backstage.io/kubernetes-id: ${{values.component_id}}
 spec:
   type: service
   lifecycle: experimental
-  owner: ${{values.owner | jsonify}}
+  owner: ${{values.owner}}
