--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -1,14 +1,14 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.component_id}}
-  description: ${{values.description}}
+  name: ${{cookiecutter.component_id | dump}}
+  description: ${{cookiecutter.description | dump}}
   annotations:
-    github.com/project-slug: ${{values.destination.owner + "/" + values.destination.name}}
-    backstage.io/techdocs-ref: url:{{steps.publish.output.remoteUrl}}
-    argocd/app-name: ${{values.component_id}}
-    backstage.io/kubernetes-id: ${{values.component_id}}
+    github.com/project-slug: ${{cookiecutter.destination.git.owner + "/" + cookiecutter.destination.git.name}}
+    backstage.io/techdocs-ref: url:${{cookiecutter.storePath}}
+    argocd/app-name: ${{cookiecutter.component_id | dump}}
+    backstage.io/kubernetes-id: ${{cookiecutter.component_id | dump}}
 spec:
   type: service
   lifecycle: experimental
-  owner: ${{values.owner}}
+  owner: $${{values.owner}}
