--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -1,13 +1,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{cookiecutter.component_id | dump}}
-  description: ${{cookiecutter.description | dump}}
+  name: ${{values.component_id | dump}}
+  description: ${{values.description | dump}}
   annotations:
-    github.com/project-slug: ${{cookiecutter.destination.git.owner + "/" + cookiecutter.destination.git.name}}
-    backstage.io/techdocs-ref: url:${{cookiecutter.storePath}}
-    argocd/app-name: ${{cookiecutter.component_id | dump}}
-    backstage.io/kubernetes-id: ${{cookiecutter.component_id | dump}}
+    github.com/project-slug: ${{values.destination.git.owner + "/" + values.destination.git.name}}
+    backstage.io/techdocs-ref: url:${{values.storePath}}
+    argocd/app-name: ${{values.component_id | dump}}
+    backstage.io/kubernetes-id: ${{values.component_id | dump}}
 spec:
   type: service
   lifecycle: experimental
