--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${{values.component_id | dump}}
   description: ${{values.description | dump}}
   annotations:
-    # github.com/project-slug: ${{values.destination.git.owner + "/" + values.destination.git.name}}
+    github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
     # backstage.io/techdocs-ref: url:${{values.storePath}}
     argocd/app-name: ${{values.component_id | dump}}
     backstage.io/kubernetes-id: ${{values.component_id | dump}}
