--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -5,7 +5,7 @@ metadata:
   description: ${{values.description | dump}}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
-    # backstage.io/techdocs-ref: url:${{values.storePath}}
+    backstage.io/techdocs-ref: dir:.
     argocd/app-name: ${{values.component_id | dump}}
     backstage.io/kubernetes-id: ${{values.component_id | dump}}
 spec:
