--- a/template.yaml
+++ b/template.yaml
@@ -131,9 +131,9 @@ spec:
       name: ArgoCD
       action: kerberus:argocd
       input:
-        host: ${{values.destination.host}}
-        owner: ${{values.destination.owner}}
-        repo: ${{values.destination.repo}}
+        host: ${{parameters.repoUrl}}
+        owner: ${{parameters.destination.owner}}
+        repo: ${{parameters.destination.repo}}
 
   output:
     remoteUrl: "{{ steps.publish.output.remoteUrl }}"
