--- a/skeleton/catalog-info.yaml
+++ b/skeleton/catalog-info.yaml
@@ -8,6 +8,7 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     argocd/app-name: ${{values.component_id | dump}}
     backstage.io/kubernetes-id: ${{values.component_id | dump}}
+    sonarqube.org/project-key: ${{values.component_id}}
 spec:
   type: service
   lifecycle: experimental
