--- a/template.yaml
+++ b/template.yaml
@@ -127,11 +127,11 @@ spec:
         repoContentsUrl: "{{ steps.publish.output.repoContentsUrl }}"
         catalogInfoPath: "/catalog-info.yaml"
 
-    - id: argocd
-      name: Create application on ArgoCD
-      action: kerberus:argocd
-      input:
-        host: ${{parameters.repoUrl}}
+    # - id: argocd
+    #   name: Create application on ArgoCD
+    #   action: kerberus:argocd
+    #   input:
+    #     host: ${{parameters.repoUrl}}
 
   output:
     remoteUrl: "{{ steps.publish.output.remoteUrl }}"
